--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -30,10 +30,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="content-language" content="ro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            <span x-show="language === 'ro'">Cubevo Data Concept | Soluții software moderne</span>
-            <span x-show="language === 'en'">Cubevo Data Concept | Modern Software Solutions</span>
-        </title>
+        <title>Cubevo Data Concept | Modern Software Solutions</title>
 
         <!-- Tailwind CSS -->
         <script src="https://cdn.tailwindcss.com"></script>
