--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -73,7 +73,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
         <!-- Favicon -->
-        <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
+        <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
 
         <!-- Custon style sheet -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
