--- a/templates/core/includes/header.html
+++ b/templates/core/includes/header.html
@@ -29,6 +29,12 @@
                     <span x-show="language === 'en'">Microservers</span>
                     <span x-show="language === 'ro'">Microservere</span>
                 </a>
+                <a href="{% url 'digital_signage' %}"
+                   class="text-gray-900 dark:text-gray-100 hover:text-blue-700 dark:hover:text-blue-400 transition-colors font-medium"
+                   aria-label="View our services">
+                    <span x-show="language === 'en'">Digital Signage</span>
+                    <span x-show="language === 'ro'">Semnalistică Digitală</span>
+                </a>
                 <a href="{% url 'index' %}#portfolio" class="hover:text-blue-600 dark:hover:text-blue-400 transition-colors">
                     <span x-show="language === 'en'">Projects</span>
                     <span x-show="language === 'ro'">Proiecte</span>
