added link to DSig text on digital signage page

--- a/templates/core/digital_signage.html
+++ b/templates/core/digital_signage.html
@@ -14,10 +14,10 @@
                 </h1>
                 <p class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
                     <span x-show="language === 'en'">
-                        DSig is a powerful digital signage management platform that allows you to control and manage multiple devices from one central location.
+                        <a href="https://dsig.cubevodata.com/" class="text-blue-700 dark:text-blue-400 hover:text-blue-800 dark:hover:text-blue-300 transition-colors">DSig</a> is a powerful digital signage management platform that allows you to control and manage multiple devices from one central location.
                     </span>
                     <span x-show="language === 'ro'">
-                        DSig este o platformă de gestionare a dispozitivelor de semnalistică digitală care îți permite să controlezi și să gestionezi multiple dispozitive dintr-o singură locație centrală.
+                        <a href="https://dsig.cubevodata.com/" class="text-blue-700 dark:text-blue-400 hover:text-blue-800 dark:hover:text-blue-300 transition-colors">DSig</a> este o platformă de gestionare a dispozitivelor de semnalistică digitală care îți permite să controlezi și să gestionezi multiple dispozitive dintr-o singură locație centrală.
                     </span>
                 </p>
             </div>
