--- a/templates/core/digital_signage.html
+++ b/templates/core/digital_signage.html
@@ -8,8 +8,9 @@
         aria-roledescription="Digital Signage Solutions">
         <div class="container mx-auto px-4">
             <div class="text-center mb-12">
-                <a href="https://dsig.cubevodata.com/">
-                    <h1 id="digital-signage-title" class="text-4xl md:text-6xl font-thin text-blue-700 dark:text-blue-400 mb-6">
+                <a href="https://dsig.cubevodata.com/"
+                   class="block hover:scale-105 transition-transform duration-200 group">
+                    <h1 id="digital-signage-title" class="text-4xl md:text-6xl font-thin text-blue-700 dark:text-blue-400 mb-6 group-hover:text-blue-800 dark:group-hover:text-blue-300 transition-colors duration-200 underline decoration-2 underline-offset-4">
                         <span x-show="language === 'en'">Digital Signage Solutions</span>
                         <span x-show="language === 'ro'">Soluții de semnalistică digitală</span>
                     </h1>
